# interxim

./: COPYING  INSTALL  Makefile.am  Makefile.in  README  configure  configure.in  libtool
IMdkit/: IMdkit.h  Makefile.am  Makefile.in
debian/: changelog  control  copyright  rules
doc/: HOWTO-keymap.txt
kmap/: ASCII-IPA.kmap  ArabicKeyboard.kmap  ArabicTranslit.kmap  ArmenianEastPhon.kmap  Azeri.kmap  Belarusian.kmap  Ben-Inscript.kmap  Bengali.kmap  Bulgarian.kmap  CS-dead.kmap  Cherokee.kmap  Chinese-Pinyin.kmap  Chinese-WB.kmap  Croatian.kmap  Czech.kmap  Dev-Inscript.kmap  Dev-Phonetic.kmap  Devanagari.kmap  GrandLatin.kmap  GreekMonotonic.kmap  GreekPolytonic.kmap  Guj-Inscript.kmap  Gujarati.kmap  Gur-Inscript.kmap  Gurmukhi.kmap  Hungarian-prefix.kmap  Inuktitut-ICI.kmap  Inuktitut-KBD.kmap  Kan-Inscript.kmap  Kana.kmap  Kanji.kmap  Kannada.kmap  Klingon.kmap  Makefile.am  Makefile.in  Mal-Inscript.kmap  Malayalam.kmap  MiddleKorean.kmap  OldHungarian.kmap  Ori-Inscript.kmap  (+26 more)
src/: IC.c  IC.h  Makefile.am  Makefile.in  font_selector.cpp  font_selector.h  gui.cpp  gui.h  interface.cpp  interface.h  interface.x11.cpp  interxim.cpp  kmap.c  kmap.h  sampleIM.c
