pkgdata_DATA = \
ASCII-IPA.kmap Arabic.kmap ArabicKeyboard.kmap ArabicTranslit.kmap \
ArmenianEast.kmap ArmenianWest.kmap Azeri.kmap Belarusian.kmap \
Ben-Inscript.kmap Bengali.kmap Bulgarian.kmap CS-dead.kmap \
Cherokee.kmap Chinese-CJ.kmap Croatian.kmap Cyrillic.kmap Czech.kmap \
DE-RU.kmap Danish.kmap Dev-Inscript.kmap Dev-Phonetic.kmap Devanagari.kmap \
Dutch.kmap Esperanto.kmap Ethiopic.kmap French.kmap Georgian.kmap \
German.kmap GrandLatin.kmap GreekBible.kmap GreekMonotonic.kmap \
GreekPolytonic.kmap Guarani.kmap Guj-Inscript.kmap Gujarati.kmap \
Gur-Inscript.kmap Gurmukhi.kmap Hangul2.kmap Hangul3.kmap Hebrew.kmap \
HebrewIsraeli.kmap Hungarian-prefix.kmap Hungarian.kmap Israeli.kmap \
KOI8_R_KEY.kmap Kan-Inscript.kmap Kana.kmap Kanji.kmap Kannada.kmap \
Klingon.kmap Lithuanian.kmap Mal-Inscript.kmap Malayalam.kmap \
MiddleKorean.kmap Mnemonic.kmap OldHungarian.kmap Ori-Inscript.kmap \
Oriya.kmap Polish.kmap RU-javerty.kmap RU-translit.kmap Romanian.kmap \
Russian-ISO-Translit.kmap Russian.kmap SGML.kmap SK.kmap SR-Cyrillic.kmap \
Slovenian.kmap Spanish.kmap Syriac.kmap TCVNcombine.kmap TCVNkey.kmap \
Tam-Inscript.kmap Tamil.kmap TeX.kmap Tel-Inscript.kmap Telugu.kmap \
Thai.kmap Tibetan-Wylie.kmap Troff.kmap Ukrainian-translit.kmap Unicode.kmap \
Urdu-ArabTeX.kmap Urdu-Nastaliq.kmap Urdu.kmap VNtelex.kmap Vietnamese.kmap \
VietnameseTelex.kmap Welsh.kmap Yiddish.kmap smeTeX.kmap

